# mitoken

./: CMakeLists.txt  README.md
include/mitoken/: mitoken.h
include/mitoken/include/: extern.h  regex.h  token_list.h  utf.h
tests/: CMakeLists.txt  test_mitoken.cpp
